--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="main">
+        <h1>Main</h1>
+        <header class="col-s-12">
+            <h1>Header</h1>
+            <p>Lorem ipsum dolor sit amet</p>
+        </header>
+        <div class="hero col-s-12">
+            <h1>Hero</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eget nisl condimentum, ultricies sem quis, tempor felis. Donec eu leo vitae odio mollis commodo nec ut diam.</p>
+        </div>
+        <div class="row">
+            <section class="col-s-7 col-6">
+                <h1>Content</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eget nisl condimentum, ultricies sem quis, tempor felis. Donec eu leo vitae odio mollis commodo nec ut diam. Morbi consequat, libero nec convallis faucibus, augue nunc ultricies dolor, eu tempus lacus purus eu libero. In hac habitasse platea dictumst. Quisque augue dui, feugiat in sodales facilisis, ultrices a metus. Nunc vulputate eros dui, sit amet eleifend nisi condimentum volutpat. Aenean porttitor et nulla vitae scelerisque.</p>
+                <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus elit ipsum, venenatis a felis eu, condimentum pellentesque nunc. Donec dictum justo non purus ornare vehicula. Cras mattis, risus at mollis rhoncus, nulla nisl posuere diam, at sodales dolor nisi id metus. Mauris vitae quam aliquam turpis finibus sagittis. Phasellus maximus, lectus at faucibus mollis, sem ante pharetra libero, ac bibendum ipsum nulla a massa. Proin convallis velit risus, ac tincidunt eros fermentum sed. Vivamus ipsum lectus, euismod non nibh at, porta gravida eros. Nullam ultricies urna in sapien dapibus, eu elementum lectus tincidunt.</p>
+            </section>
+            <aside class="col-s-5 col-4">
+                <h1>Sidebar</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eget nisl condimentum, ultricies sem quis, tempor felis. Donec eu leo vitae odio mollis commodo nec ut diam. Morbi consequat, libero nec convallis faucibus, augue nunc ultricies dolor, eu tempus lacus purus eu libero. In hac habitasse platea dictumst. Quisque augue dui, feugiat in sodales facilisis, ultrices a metus. Nunc vulputate eros dui, sit amet eleifend nisi condimentum volutpat. Aenean porttitor et nulla vitae scelerisque.</p>
+            </aside>
+        </div>
+        <footer class="col-s-12">
+            <h1>Footer</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eget nisl condimentum, ultricies sem quis, tempor felis. Donec eu leo vitae odio mollis commodo nec ut diam. Morbi consequat, libero nec convallis faucibus.</p>
+        </footer>
+    </div>
 </body>
 </html>
